--- a/singolo1.css
+++ b/singolo1.css
@@ -14,28 +14,32 @@ body {
 
 @font-face {
   font-family: LatoBlack;
-  src: url(./assets/fonts/Lato-Black.ttf) format("truetype");
+  src: local("Lato Black"), local("Lato-Black"),
+    url(./assets/fonts/Lato-Black.ttf) format("truetype");
   /* font-weight: 400; */
   font-style: normal;
 }
 
 @font-face {
   font-family: LatoBold;
-  src: url(./assets/fonts/Lato-Bold.ttf) format("truetype");
+  src: local("Lato Bold"), local("Lato-Bold"),
+    url(./assets/fonts/Lato-Bold.ttf) format("truetype");
   /* font-weight: 400; */
   font-style: normal;
 }
 
 @font-face {
   font-family: LatoLight;
-  src: url(./assets/fonts/Lato-Light.ttf) format("truetype");
+  src: local("Lato Light"), local("Lato-Light"),
+    url(./assets/fonts/Lato-Light.ttf) format("truetype");
   /* font-weight: 400; */
   font-style: normal;
 }
 
 @font-face {
   font-family: LatoRegular;
-  src: url(./assets/fonts/Lato-Regular.ttf) format("truetype");
+  src: local("Lato Regular"), local("Lato-Regular"),
+    url(./assets/fonts/Lato-Regular.ttf) format("truetype");
   /* font-weight: 400; */
   font-style: normal;
 }
@@ -78,7 +82,7 @@ a:active {
   margin-left: 40px;
   color: #ffffff;
   font-size: 2.5rem;
-  font-family: LatoBold;
+  font-family: LatoBold, Verdana, sans-serif;
   letter-spacing: -0.7px;
   cursor: pointer;
 }
@@ -91,7 +95,7 @@ a:active {
 .navigation {
   display: flex;
   font-size: 1.2rem;
-  font-family: LatoBold;
+  font-family: LatoBold, Verdana, sans-serif;
   text-align: center;
   margin-right: 40px;
   letter-spacing: -0.2px;
@@ -222,14 +226,14 @@ a:active {
 }
 
 .services__title {
-  font-family: LatoBlack;
+  font-family: LatoBlack, Verdana, sans-serif;
   font-size: 30px;
   color: #666d89;
   margin-bottom: 23px;
 }
 
 .services__description {
-  font-family: LatoLight;
+  font-family: LatoLight, Verdana, sans-serif;
   color: #767e9e;
   font-size: 20px;
   line-height: 30px;
@@ -261,7 +265,7 @@ a:active {
 
 .service__description h3 {
   margin: 0;
-  font-family: LatoBlack;
+  font-family: LatoBlack, Verdana, sans-serif;
   font-size: 18px;
   color: #666d89;
   line-height: 0.992;
@@ -270,7 +274,7 @@ a:active {
 
 .service__description p {
   font-size: 12px;
-  font-family: LatoRegular;
+  font-family: LatoRegular, Verdana, sans-serif;
   color: #767e9e;
   text-align: justify;
   line-height: 1.797;
