--- a/style.css
+++ b/style.css
@@ -7,20 +7,12 @@ html {
 }
 
 .layout {
-  width: 1020px;
   margin: 0 auto;
   position: relative;
 }
 
 .wrapper {
-  width: 940px;
   margin: 0 auto;
-}
-
-.wrapper-with-padding {
-  width: 940px;
-  margin: 0 auto;
-  padding-top: 69px;
 }
 
 .slider {
@@ -37,46 +29,14 @@ html {
   flex: 0 0 100%;
   max-width: 100%;
   position: relative;
-  height: 595px;
 }
-.carousel__item-1 {
+.slider__item-1 {
   background-color: #f06c64;
   border-bottom: solid 5px #ea676b;
 }
-.carousel__item-2 {
+.slider__item-2 {
   background-color: #648bf0;
   border-bottom: solid 5px rgb(80, 112, 194);
-}
-/* @media (min-width: 980px) {
-  .slider__item {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-} */
-
-.slider__item > div {
-  /* line-height: 250px;
-  font-size: 100px;
-  text-align: center; */
-}
-
-.phone--2 {
-  top: 58px !important;
-  left: 391px !important;
-  transform: scale(1.063);
-}
-.phone--1 {
-  top: 67px !important;
-  left: 209px !important;
-  opacity: 0.5;
-  transform: scale(0.65);
-}
-.phone--3 {
-  top: 67px !important;
-  left: auto !important;
-  right: 210px !important;
-  opacity: 0.5;
-  transform: scale(0.65);
 }
 
 @font-face {
@@ -112,20 +72,16 @@ html {
 }
 
 .header {
-  height: 95px;
-  border-bottom: solid 5.5px #323746;
+  border-bottom: solid 5px #323746;
   background-color: #2d303a;
   color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  box-sizing: border-box;
   z-index: 5;
-  width: 1020px;
   margin: 0 auto;
 }
-
 a:link {
   color: inherit;
   text-decoration: none;
@@ -150,7 +106,6 @@ a:active {
 }
 
 .logo {
-  margin-left: 40px;
   color: #ffffff;
   font-size: 2.5rem;
   font-family: LatoBold, Verdana, sans-serif;
@@ -169,14 +124,8 @@ a:active {
   font-size: 1.2rem;
   font-family: LatoBold, Verdana, sans-serif;
   text-align: center;
-  margin-right: 40px;
-  letter-spacing: -0.2px;
   text-transform: uppercase;
   color: #ffffff;
-}
-
-.header__navigation {
-  margin-top: 1.2rem;
 }
 
 .navigation__link {
@@ -200,26 +149,13 @@ a:active {
   content: "·";
   display: inline-block;
   color: #424758;
-  width: 30px;
 }
 
-.carousel {
-  height: 595px;
-  background-color: #f06c64;
-  position: relative;
-  border-bottom: solid 5px #ea676b;
-}
-
-.carousel-padding {
-  padding-top: 95px;
-}
-
-.carousel__control {
+.slider__control {
   position: absolute;
   transform-origin: center;
   width: 16px;
   height: 27px;
-  top: 46.7%;
   z-index: 3;
   cursor: pointer;
   filter: opacity(0.2);
@@ -228,14 +164,12 @@ a:active {
   transition-timing-function: ease-in;
 }
 
-.carousel__control--prev {
+.slider__control--prev {
   background-image: url(./assets/images/chevLeft.png);
-  left: 42px;
 }
 
-.carousel__control--next {
+.slider__control--next {
   background-image: url(./assets/images/chevRight.png);
-  right: 42px;
 }
 
 .phone-btn-1 {
@@ -278,9 +212,9 @@ a:active {
   width: 44px;
 }
 
-.carousel__control--prev:hover,
-.carousel__control--next:hover {
-  filter: opacity(1);
+.slider__control--prev:hover,
+.slider__control--next:hover {
+  filter: opacity(0.5);
 }
 
 .phone {
@@ -290,11 +224,6 @@ a:active {
   height: 483px;
   z-index: 2;
   transform-origin: center;
-}
-
-.phone--vertical {
-  top: 53px;
-  left: 112px;
 }
 
 .phone--vertical::before,
@@ -309,12 +238,6 @@ a:active {
 
 .phone--horizontal::before {
   transform: scaleY(-1);
-}
-
-.phone--horizontal {
-  top: 53px;
-  left: 547px;
-  transform: scaleY(-1) rotate(-90deg);
 }
 
 .item {
@@ -354,9 +277,7 @@ a:active {
 }
 
 .services {
-  height: 461px;
   background-color: #f2f2f2;
-  padding: 34px 40px 0;
   border-bottom: solid 5px #ffffff;
 }
 
@@ -374,13 +295,6 @@ a:active {
   line-height: 30px;
   margin: -6px 0;
   letter-spacing: -0.95px;
-}
-
-.service {
-  display: flex;
-  justify-content: space-between;
-  width: 300px;
-  height: 124px;
 }
 
 .service__icon {
@@ -412,7 +326,6 @@ a:active {
 }
 
 .portfolio {
-  height: 864px;
   border-bottom: 5px solid #323746;
   background-color: #2d303a;
 }
@@ -433,9 +346,6 @@ a:active {
 
 .portfolio__description {
   color: #767e9e;
-}
-
-.portfolio_tags {
 }
 
 .tag {
@@ -469,23 +379,14 @@ a:active {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.work {
-  margin-bottom: 18px;
-  width: 220px;
-  height: 187px;
-}
-
-.work__image {
-  width: 220px;
-  height: 187px;
-}
 
 .work-selected {
   border: 5px solid #f06c64;
+  border-right: none;
+  border-bottom: none;
 }
 
 .about-us {
-  height: 729px;
   border-bottom: 5px solid #ffffff;
   background-color: #f2f2f2;
 }
@@ -496,51 +397,6 @@ a:active {
 
 .about-us__description {
   color: #767e9e;
-}
-
-.employer {
-  display: inline-block;
-  margin-top: 24px;
-  width: 300px;
-}
-
-.employer__image {
-  height: 300px;
-}
-
-.employer__name {
-  margin: 0;
-  font-family: LatoBlack, Verdana, sans-serif;
-  font-size: 18px;
-  color: #666d89;
-  line-height: 0.992;
-  letter-spacing: 0px;
-  margin-top: 16px;
-}
-
-.employer__description {
-  font-size: 12px;
-  font-family: LatoRegular, Verdana, sans-serif;
-  color: #767e9e;
-  text-align: justify;
-  line-height: 1.797;
-  margin: 0;
-  margin-top: 9px;
-  letter-spacing: -0.15px;
-}
-
-.social-media-list {
-  display: flex;
-  width: 250px;
-  margin: 0;
-  list-style: none;
-  padding: 0;
-  margin-top: 25px;
-}
-
-.social-media-item {
-  margin-left: 1px;
-  margin-right: 6px;
 }
 
 .title {
@@ -561,12 +417,6 @@ a:active {
   margin-bottom: 1.1rem;
 }
 
-.contact {
-  border-bottom: 5px solid #ea676b;
-  background-color: #f06c64;
-  height: 649px;
-}
-
 .contact__title {
   color: #f0d8d9;
 }
@@ -578,14 +428,6 @@ a:active {
 .footer {
   height: 76px;
   background-color: #2d303a;
-}
-
-.footer-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 940px;
-  margin: 0 auto;
 }
 
 .footer-copyright {
@@ -606,72 +448,6 @@ a:active {
   margin-top: 20px;
   list-style: none;
   justify-content: space-between;
-}
-
-.footer-social-media-item {
-}
-
-.contacts__container {
-  display: flex;
-  padding-top: 17px;
-}
-
-.contacts__form {
-  width: 620px;
-  height: 360px;
-}
-
-.contacts__info {
-  width: 300px;
-  height: 360px;
-  padding-left: 20px;
-  color: #f0d8d9;
-}
-
-.contacts-form-textarea {
-  height: 188px;
-  padding-top: 12px;
-  padding-left: 16px;
-  font-size: 14px;
-  line-height: 12px;
-  resize: none;
-  width: 601px;
-  border-radius: 5px;
-  border: 0;
-  background-color: #d6564f;
-  margin-top: 16px;
-  padding-left: 16px;
-  font-family: LatoRegular, Arial, sans-serif;
-  letter-spacing: -0.6px;
-  color: #f48c8f;
-}
-.contacts-form-input {
-  height: 36px;
-  border-radius: 5px;
-  border: 0;
-  background-color: #d6564f;
-  color: #f48c8f;
-  width: 603px;
-  margin-top: 16px;
-  padding-left: 16px;
-  letter-spacing: -0.6px;
-  font-family: LatoRegular, Arial, sans-serif;
-  color: #f48c8f;
-}
-
-.contacts-form-input-button {
-  height: 36px;
-  border-radius: 5px;
-  border: 0;
-  letter-spacing: -0.6px;
-  background-color: #d6564f;
-  color: #f48c8f;
-  width: 618px;
-  margin-top: 16px;
-  padding-left: 16px;
-  font-family: LatoRegular, Arial, sans-serif;
-  color: #f48c8f;
-  cursor: pointer;
 }
 
 .contacts-form-input::placeholder,
@@ -699,33 +475,6 @@ a:active {
   box-shadow: inset 0 0 0 50px #d6564f;
   -webkit-box-shadow: inset 0 0 0 50px #d6564f !important;
   -webkit-text-fill-color: #f48c8f !important;
-}
-
-.wrapper-no-paddings {
-  width: 940px;
-  margin: 0 auto;
-}
-
-.contacts__info--header {
-  font-size: 18px;
-  font-weight: 900;
-  letter-spacing: 0.005em;
-  line-height: 24px;
-  margin: 12px 0 0;
-
-  font-family: LatoBlack, Arial, sans-serif;
-}
-
-.contacts__info--description {
-  margin-bottom: 24px;
-  margin-top: 3px;
-  padding-top: 5px;
-  width: 300px;
-  font-size: 12px;
-  line-height: 22px;
-  letter-spacing: -0.1px;
-  text-align: justify;
-  font-family: LatoRegular, Arial, sans-serif;
 }
 
 .contacts__info--address {
@@ -768,6 +517,10 @@ a:active {
 .contacts__info--email-link:focus {
   outline: none;
   text-decoration: underline;
+}
+.wrapper-no-paddings {
+  width: 940px;
+  margin: 0 auto;
 }
 
 .modal {
@@ -870,4 +623,524 @@ a:active {
 
 .modal {
   display: none;
+}
+
+@media only screen and (min-width: 1020px) {
+  .layout {
+    width: 1020px;
+  }
+  .wrapper {
+    width: 940px;
+  }
+  .slider {
+    padding-top: 95px;
+  }
+  .slider__item {
+    height: 595px;
+  }
+  /* .phone--2 {
+    top: 58px !important;
+    left: 391px !important;
+    transform: scale(1.063);
+  } */
+
+  .phone--vertical {
+    top: 53px;
+    left: 112px;
+  }
+  .phone--horizontal {
+    top: 53px;
+    left: 547px;
+    transform: scaleY(-1) rotate(-90deg);
+  }
+  .header {
+    height: 90px;
+    width: 1020px;
+  }
+  .header__navigation {
+    margin-top: 1.2rem;
+  }
+
+  .navigation__link:not(:last-child):after {
+    width: 30px;
+  }
+
+  .logo {
+    margin-left: 40px;
+  }
+  .navigation {
+    margin-right: 40px;
+    letter-spacing: -0.2px;
+  }
+  .services {
+    height: 461px;
+    padding: 34px 40px 0;
+  }
+  .services__list {
+    margin-top: 54px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .service {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height: 124px;
+  }
+  .phone--2 {
+    top: 58px !important;
+    left: 391px !important;
+    transform: scale(1.063);
+  }
+  .phone--1 {
+    top: 67px !important;
+    left: 209px !important;
+    opacity: 0.5;
+    transform: scale(0.65);
+  }
+  .phone--3 {
+    top: 67px !important;
+    left: auto !important;
+    right: 210px !important;
+    opacity: 0.5;
+    transform: scale(0.65);
+  }
+  .portfolio {
+    height: 795px;
+    padding: 69px 40px 0px 39px;
+  }
+  .work__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  .work {
+    margin-bottom: 20px;
+    width: 220px;
+    height: 187px;
+  }
+
+  .work__image {
+    width: 220px;
+    height: 187px;
+  }
+  .about-us {
+    height: 660px;
+    padding: 69px 40px 0px 39px;
+  }
+
+  .employer__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .employer {
+    display: inline-block;
+    margin-top: 34px;
+    width: 300px;
+  }
+
+  .employer__image {
+    height: 300px;
+  }
+
+  .employer__name {
+    margin: 0;
+    font-family: LatoBlack, Verdana, sans-serif;
+    font-size: 18px;
+    color: #666d89;
+    line-height: 0.992;
+    letter-spacing: 0px;
+    margin-top: 16px;
+  }
+
+  .employer__description {
+    font-size: 12px;
+    font-family: LatoRegular, Verdana, sans-serif;
+    color: #767e9e;
+    text-align: justify;
+    line-height: 1.797;
+    margin: 0;
+    margin-top: 9px;
+    letter-spacing: -0.15px;
+  }
+  .social-media-list {
+    display: flex;
+    width: 250px;
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    margin-top: 25px;
+  }
+  .social-media-item {
+    margin-left: 2px;
+    margin-right: 6px;
+  }
+  .slider__control--prev {
+    left: 42px;
+  }
+
+  .slider__control--next {
+    right: 40px;
+  }
+  .slider__control {
+    top: 54.1%;
+  }
+  .contact {
+    border-bottom: 5px solid #ea676b;
+    background-color: #f06c64;
+    height: 580px;
+    padding: 69px 40px 0px 39px;
+  }
+  .contacts__container {
+    display: flex;
+    padding-top: 17px;
+  }
+
+  .contacts__form {
+    width: 620px;
+    height: 360px;
+  }
+
+  .contacts__info {
+    width: 300px;
+    height: 360px;
+    padding-left: 20px;
+    color: #f0d8d9;
+  }
+
+  .contacts-form-textarea {
+    height: 188px;
+    padding-top: 12px;
+    padding-left: 16px;
+    font-size: 14px;
+    line-height: 12px;
+    resize: none;
+    width: 601px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #d6564f;
+    margin-top: 16px;
+    padding-left: 16px;
+    font-family: LatoRegular, Arial, sans-serif;
+    letter-spacing: -0.6px;
+    color: #f48c8f;
+  }
+  .contacts-form-input {
+    height: 36px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #d6564f;
+    color: #f48c8f;
+    width: 603px;
+    margin-top: 16px;
+    padding-left: 16px;
+    letter-spacing: -0.6px;
+    font-family: LatoRegular, Arial, sans-serif;
+    color: #f48c8f;
+  }
+  .contacts__info--header {
+    font-size: 18px;
+    font-weight: 900;
+    letter-spacing: 0.005em;
+    line-height: 24px;
+    margin: 12px 0 0;
+
+    font-family: LatoBlack, Arial, sans-serif;
+  }
+
+  .contacts__info--description {
+    margin-bottom: 24px;
+    margin-top: 3px;
+    padding-top: 5px;
+    width: 300px;
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: -0.1px;
+    text-align: justify;
+    font-family: LatoRegular, Arial, sans-serif;
+  }
+  .contacts-form-input-button {
+    height: 36px;
+    border-radius: 5px;
+    border: 0;
+    letter-spacing: -0.6px;
+    background-color: #d6564f;
+    color: #f48c8f;
+    width: 618px;
+    margin-top: 16px;
+    padding-left: 16px;
+    font-family: LatoRegular, Arial, sans-serif;
+    color: #f48c8f;
+    cursor: pointer;
+  }
+  .footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 940px;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 1019px) {
+  .layout {
+    width: 768px;
+  }
+  .wrapper {
+    width: auto;
+  }
+  .slider {
+    padding-top: 95px;
+  }
+  .slider__item {
+    height: 447px;
+  }
+  .phone--vertical {
+    top: -19px;
+    left: 54px;
+    transform: scaleX(0.75) scaleY(0.753);
+  }
+  .phone--horizontal {
+    top: -18px;
+    left: 381px;
+    transform: scaleY(-1) scaleX(0.75) scaleY(0.753) rotate(-90deg);
+  }
+
+  /* .phone--2 {
+    top: 58px !important;
+    left: 391px !important;
+    transform: scale(1.063);
+  } */
+  .phone--2 {
+    top: -8px !important;
+    left: 284px !important;
+    transform: scaleX(0.75) scaleY(0.753);
+  }
+  .phone--1 {
+    top: -5px !important;
+    left: 151px !important;
+    opacity: 0.5;
+    transform: scaleX(0.45) scaleY(0.453);
+  }
+  .phone--3 {
+    top: -5px !important;
+    left: auto !important;
+    right: 119px !important;
+    opacity: 0.5;
+    transform: scaleX(0.45) scaleY(0.453);
+  }
+  .header {
+    height: 90px;
+    width: 768px;
+  }
+  .header__navigation {
+    margin-top: 4px;
+  }
+
+  .logo {
+    margin-left: 40px;
+  }
+  .navigation__link:not(:last-child):after {
+    width: 31px;
+  }
+
+  .navigation {
+    margin-right: 40px;
+    letter-spacing: -0.25px;
+  }
+  .services {
+    height: 635px;
+    padding: 14px 48px 20px 42px;
+  }
+  .services__list {
+    margin-top: 45px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-right: 25px;
+  }
+  .service {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height: 144px;
+  }
+  .portfolio {
+    height: 1028px;
+    padding: 69px 40px 0px 39px;
+  }
+  .portfolio__description {
+    letter-spacing: -0.1px;
+  }
+  .work__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
+  .work__image {
+    width: 216px;
+    height: 184px;
+  }
+  .work {
+    margin-bottom: 19px;
+    width: 216px;
+    height: 184px;
+  }
+  .about-us {
+    height: 601px;
+    padding: 63px 40px 0px 43px;
+  }
+  .slider__control--prev {
+    left: 29px;
+  }
+  .employer__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .employer {
+    display: inline-block;
+    margin-top: 27px;
+    width: 218px;
+  }
+
+  .employer__image {
+    height: 218px;
+  }
+
+  .employer__name {
+    margin: 0;
+    font-family: LatoBlack, Verdana, sans-serif;
+    font-size: 18px;
+    color: #666d89;
+    line-height: 0.992;
+    letter-spacing: 0px;
+    margin-top: 11px;
+  }
+
+  .employer__description {
+    font-size: 12px;
+    font-family: LatoRegular, Verdana, sans-serif;
+    color: #767e9e;
+    text-align: justify;
+    line-height: 1.797;
+    margin: 0;
+    margin-top: 3px;
+    letter-spacing: -0.15px;
+  }
+  .social-media-list {
+    display: flex;
+    width: 250px;
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    margin-top: 14px;
+  }
+  .social-media-item {
+    margin-left: 1px;
+    margin-right: 6px;
+  }
+  .slider__control--next {
+    right: 40px;
+  }
+  .slider__control {
+    top: 56.1%;
+  }
+  .contact {
+    border-bottom: 5px solid #ea676b;
+    background-color: #f06c64;
+    height: 563px;
+    padding: 63px 40px 0px 42px;
+  }
+  .contacts__container {
+    display: flex;
+    padding-top: 0px;
+  }
+  .contacts__form {
+    width: 448px;
+    height: 360px;
+  }
+
+  .contacts__info {
+    width: 220px;
+    height: 360px;
+    padding-left: 20px;
+    color: #f0d8d9;
+  }
+
+  .contacts-form-textarea {
+    height: 148px;
+    padding-top: 9px;
+    padding-left: 16px;
+    font-size: 14px;
+    line-height: 12px;
+    resize: none;
+    width: 432px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #d6564f;
+    margin-top: 11px;
+    padding-left: 5px;
+    font-family: LatoRegular, Arial, sans-serif;
+    letter-spacing: -0.6px;
+    color: #f48c8f;
+  }
+  .contacts-form-input {
+    height: 36px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #d6564f;
+    color: #f48c8f;
+    width: 433px;
+    margin-top: 13px;
+    padding-left: 6px;
+    letter-spacing: -0.6px;
+    font-family: LatoRegular, Arial, sans-serif;
+    color: #f48c8f;
+  }
+  .contacts__info--header {
+    font-size: 18px;
+    font-weight: 900;
+    letter-spacing: 0.005em;
+    line-height: 24px;
+    margin: 12px 0 0;
+    font-family: LatoBlack, Arial, sans-serif;
+  }
+
+  .contacts__info--description {
+    margin-bottom: 13px;
+    margin-top: 0px;
+    padding-top: 0px;
+    width: 220px;
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: -0.1px;
+    text-align: justify;
+    font-family: LatoRegular, Arial, sans-serif;
+  }
+  .contacts-form-input-button {
+    height: 36px;
+    border-radius: 5px;
+    border: 0;
+    letter-spacing: -0.6px;
+    background-color: #d6564f;
+    color: #f48c8f;
+    width: 132px;
+    margin-top: 16px;
+    padding-left: 16px;
+    font-family: LatoRegular, Arial, sans-serif;
+    color: #f48c8f;
+    cursor: pointer;
+  }
+  .footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 684px;
+    margin: 0 auto;
+  }
 }
